# COA_convert

./: .gitignore  CoaExtract.py  README.md  build_noadmin.py  build_script.py  coa_processing.log.1  failure_results.csv  hexpol_results.csv  installer_script.iss  pyproject.toml  pyrightconfig.json  results.csv  sample_coa_with_failure.txt  sample_pdf_creator.py  simple_build_script.py  simple_direct_build.py  simple_installer_script.iss  test_imports.py  test_results.csv  timken_results.csv  timken_test.csv  windows_build_guide.md
WINDOWS_10_PRO_PKG/: CHANGELOG.md  LICENSE  README.md  SECURITY.md  TROUBLESHOOTING.md  build.bat  build_script.py
coa_analyzer/: __init__.py  coa_analyzer.py  coa_extract.py  core.py  io.py
package_for_windows/: README.md  direct_build.py  download_tesseract.py  friend_instructions.txt  simple_installer_script.iss
package_for_windows/coa_analyzer/: cli.py  coa_analyzer.py  display.py
test_samples/: 3M PP SLP CDH0137939_results.csv  CARLISLE CDH0137472_results.csv  DIAMOND WHSE B76992_results.csv  HEXPOL CDH0138088_results.csv  HEXPOL CDH0138214_results.csv  TIMKEN CDH0136353_results.csv  TIMKEN CDH0136429_results.csv  sample_coa_results.csv
