[tool.poetry]
name = "coa-analyzer"
version = "0.1.0"
description = "Certificate of Analysis (COA) Analyzer with GUI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "coa_analyzer"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
PyPDF2 = "^3.0.1"
pdf2image = "^1.16.3"
pytesseract = "^0.3.10"
Pillow = "^10.2.0"
PyQt6 = "^6.9.0"

[tool.poetry.group.dev.dependencies]
reportlab = "^3.6.0"
pytest = "^7.0.0"
black = "^24.1.1"
isort = "^5.13.2"
pyinstaller = "^6.12.0"
pylint = "^3.3.6"

[tool.poetry.scripts]
coa-analyzer = "coa_analyzer.coa_analyzer:main"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"] 